--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 AUTH_TOKEN=1f66c93003b3b1f97ab07db7bfefc9940a0f8d4c
+FIWARE_SERVICE=etra
+FIWARE_SERVICE2=patras
+SENSOR_ID=16867
+WEARABLE_ID=eui-0080e1150533ecf3
+API_DPM_BASE_URL=http://twinairdmp.online:8669/v2
+API_DPM_BASE_URL_1=http://twinairdmp.online:1027/
+DMP_BASE_URL=http://tswinairdmp.online
+#MQTT TOKENS
+MQTT_HOST=twinairdmp.online
+MQTT_USERNAME=twinairguest
+MQTT_PASSWORD=twinairmqtt
