--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,35 @@
-requests~=2.32.3
-flask~=3.0.2
-openai~=1.16.1
-gunicorn==21.2.0
-python-dotenv~=1.0.1
-paho-mqtt~=2.1.0
+annotated-types==0.7.0
+anyio==4.4.0
+bidict==0.23.1
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+distro==1.9.0
+exceptiongroup==1.2.1
+Flask==3.0.3
+Flask-SocketIO==5.3.6
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+openai==1.16.2
+paho-mqtt==2.1.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.3
+requests==2.32.3
+simple-websocket==1.0.0
+sniffio==1.3.1
+tqdm==4.66.4
+typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
+wsproto==1.2.0
+zipp==3.19.2
