HDT - Version 1.2 - October 2024

--- a/.env
+++ b/.env
@@ -6,7 +6,14 @@ WEARABLE_ID=eui-0080e1150533ecf3
 API_DPM_BASE_URL=http://twinairdmp.online:8669/v2
 API_DPM_BASE_URL_1=http://twinairdmp.online:1027/
 DMP_BASE_URL=http://tswinairdmp.online
-#MQTT TOKENS
+#CREDENTIALS MQTT
 MQTT_HOST=twinairdmp.online
 MQTT_USERNAME=twinairguest
 MQTT_PASSWORD=twinairmqtt
+#CREDENTIALS OAUTH2
+OAUTH2_CLIENT_ID=f076ec37-d68a-46f1-a052-4d503d196d53
+OAUTH2_CLIENT_SECRET=3072694e-d2c3-4f2d-be3d-c0187faee55f
+OAUTH2_ACCESS_TOKEN_URL=https://idm.twinairdmp.online/oauth2/token
+OAUTH2_AUTHORIZE_URL=https://idm.twinairdmp.online/oauth2/authorize
+OAUTH2_USERINFO_URL=https://idm.twinairdmp.online/user
+OAUTH2_LOGOUT_URL=https://idm.twinairdmp.online/auth/external_logout
