--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 annotated-types==0.7.0
 anyio==4.4.0
+Authlib==1.3.2
 bidict==0.23.1
 blinker==1.8.2
 certifi==2024.6.2
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==3.1.1
+cryptography==43.0.1
 distro==1.9.0
 exceptiongroup==1.2.1
 Flask==3.0.3
@@ -16,22 +20,31 @@ idna==3.7
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==2.1.5
+numpy==2.0.2
 openai==1.16.2
 paho-mqtt==2.1.0
+pandas==2.2.3
+pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.9.1
 python-socketio==5.11.3
+pytz==2025.2
 requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.13.1
 simple-websocket==1.0.0
+six==1.17.0
 sniffio==1.3.1
+threadpoolctl==3.6.0
 tqdm==4.66.4
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.2.2
 Werkzeug==3.0.3
 wsproto==1.2.0
 zipp==3.19.2
-
-Authlib~=1.3.2
