--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==2.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+astunparse==1.6.3
 Authlib==1.3.2
 bidict==0.23.1
 blinker==1.8.2
@@ -13,7 +15,12 @@ distro==1.9.0
 exceptiongroup==1.2.1
 Flask==3.0.3
 Flask-SocketIO==5.3.6
+flatbuffers==25.2.10
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.73.1
 h11==0.14.0
+h5py==3.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
@@ -21,30 +28,49 @@ importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
+keras==3.10.0
+libclang==18.1.1
+Markdown==3.8.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+ml_dtypes==0.5.1
+namex==0.1.0
 numpy==2.0.2
 openai==1.16.2
+opt_einsum==3.4.0
+optree==0.16.0
+packaging==25.0
 paho-mqtt==2.1.0
 pandas==2.2.3
+protobuf==5.29.5
 pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.9.1
 python-socketio==5.11.3
 pytz==2025.2
 requests==2.32.3
+rich==14.0.0
 scikit-learn==1.5.2
 scipy==1.13.1
 simple-websocket==1.0.0
 six==1.17.0
 sniffio==1.3.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.1.0
 threadpoolctl==3.6.0
 tqdm==4.66.4
 typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.2.2
 Werkzeug==3.0.3
+wrapt==1.17.2
 wsproto==1.2.0
 zipp==3.19.2
